PlayerHud score + fixes and changes

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -145,6 +145,9 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="PauseGame",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=M)
 +ActionMappings=(ActionName="FishCatcherUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
 +ActionMappings=(ActionName="FishCatcherDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
++ActionMappings=(ActionName="PauseGame",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
++ActionMappings=(ActionName="FishCatcherUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Up)
++ActionMappings=(ActionName="FishCatcherDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Down)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
