--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=E59F8A974CD218F02F107499CAC087C9
 ProjectName=Third Person BP Game Template
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "27491F3748775D1337D5CA9163498979", "Hellish Fishing")
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
